# promptly

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: prompts-seed.json
docs/: troubleshooting.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  SettingsApp.tsx  ipc.ts  main.tsx  styles.css  test-setup.ts  types.ts
frontend/src/api/: commands.test.ts  commands.ts  ipc.ts
frontend/src/bridge/: host.ts
frontend/src/components/: AboutView.tsx  CategoryChip.tsx  DeleteView.tsx  EditorView.tsx  FormRow.tsx  HistoryDetailView.tsx  HistoryView.tsx  ListView.tsx  NotificationFooter.tsx  TemplateEditor.tsx  UpdateView.tsx  VarChipWidget.ts  VarEditPopover.tsx  VarPickerPopover.tsx  VariablesView.tsx
frontend/src/components/settings/: CategoriesTab.tsx  CategoryEditDialog.tsx  CopyTargetsTab.tsx  GeneralTab.tsx  PastelColorPicker.tsx
frontend/src/editor/: varDecorations.ts
frontend/src/hooks/: useHistory.ts  useInterpolatePreview.test.ts  useInterpolatePreview.ts  useListKeyboard.ts  useNotifications.ts  usePrompts.ts
frontend/src/lib/: categories.ts  categoryColors.test.ts  categoryColors.ts  fuzzy.test.ts  fuzzy.ts  historyTitle.test.tsx  historyTitle.tsx  popoverPlacement.test.ts  popoverPlacement.ts  templateVars.test.ts  templateVars.ts  view.ts
frontend/src/types/: notifications.ts
packaging/: promptly.desktop  promptly.service
scripts/: install.sh
src/: about.rs  browser.rs  cli.rs  config.rs  db.rs  hotkey.rs  instance.rs  ipc.rs  logging.rs  main.rs  popup.rs  prompt_parser.rs  seed.rs  tray.rs  update.rs  variable_dialog.rs  webview_app.rs  window_focus.rs  window_hints.rs
src/ipc/: contract.rs  copy_targets.rs  effects.rs  history.rs  limits.rs  mod.rs  notifications.rs  prompts.rs  response.rs  settings.rs  test_support.rs  types.rs
