[package]
name = "promptly"
version = "0.1.0"
edition = "2021"
description = "System-tray prompt manager with fuzzy search and variable interpolation"

[dependencies]
wry = "0.55.1"
tao = "0.35.3"
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
anyhow = "1"
env_logger = "0.11"
log = "0.4"
regex = "1"
ksni = { version = "0.3", features = ["blocking"] }
notify-rust = "4"
dirs-next = "2"
x11 = "2.21"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
glib = "0.18.5"
gdk = "0.18.2"
gdkx11 = "0.18.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
lto = true
